apps/prod/homelab-proxy/llamactl-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llamactl-proxy
  namespace: llamactl
  annotations:
    tailscale.com/tailnet-fqdn: ${LLAMACTL_TAILNET_FQDN}
spec:
  type: ExternalName
  externalName: placeholder
  ports:
  - port: ${LLAMACTL_INTERNAL_PORT}
    name: http
