apps/prod/homelab-proxy/chatui-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: chat-ui-ingress
  namespace: chat-ui
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`${CHATUI_DOMAIN}`)
    kind: Rule
    services:
    - name: chat-ui-proxy
      port: ${CHATUI_INTERNAL_PORT}
