apps/prod/homelab-proxy/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homelab-proxy-ingress
  namespace: homelab-proxy
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostRegexp(`^[a-z0-9-]+\.${HOMELAB_DOMAIN}`)
      kind: Rule
      services:
        - name: homelab-proxy
          port: ${HOMELAB_INTERNAL_PORT}
  tls:
    secretName: wildcard-homelab-tls
